--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@clerk/localizations": "^2.6.1",
     "@clerk/nextjs": "^5.3.3",
+    "@gsap/react": "^2.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "react": "^18",
