--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/localizations": "^2.6.1",
     "@clerk/nextjs": "^5.3.3",
+    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
